# KanbanAPI

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
deployment/: Chart.yaml  Dockerfile  values.template.yaml
deployment/templates/: deployment.yaml  ingess.yaml
kanbanapi/: manage.py  pyproject.toml
kanbanapi/api/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
kanbanapi/api/management/commands/: example_article.py  generate_order_proposals.py  nav_article_sync.py
kanbanapi/api/migrations/: 0001_initial.py  0002_alter_article_art_no_alter_article_art_supplier_and_more.py  0003_remove_tags_id_alter_tags_tag_id.py
kanbanapi/api/sync/: nav_article_sync.py
kanbanapi/kanbanapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
